# CatchMe

./: CMakeLists.txt  README.md
assets/levels/: 0.txt  1.txt  2.txt  3.txt
assets/shaders/: sprite_fs.glsl  sprite_vs.glsl
assets/textures/player/: readme.txt
libraries/glfw/docs/: Doxyfile.in
resources/: vertexShader.glsl
src/: game.cpp  game.h  game_object.cpp  game_object.h  globals.h  imposter.cpp  imposter.h  main.cpp  maze.cpp  maze.h  maze.txt  maze_generator.cpp  mazer  player.cpp  player.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
